--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <h1>Etch-A-Sketch</h1>
     <div class="container"></div>
     <div class="button-container">
-        <button class="clear">Clear</button>
-        <button class="resize">Resize</button>
+      <button class="clear">Clear</button>
+      <button class="resize">Resize</button>
+    </div>
+    <div class="footer">
+      By: <a href="https://github.com/Chen-Prototypes">Roger Chen</a>
     </div>
   </body>
 </html>
